--- a/crm-app/package.json
+++ b/crm-app/package.json
@@ -2,7 +2,7 @@
   "name": "crm-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://amaftah.github.io/CRM-Application-using-React-TypeScript-and-Material-UI", 
+  "homepage": "https://amaftah.github.io/CRM-Application-using-React-TypeScript-and-Material-UI",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/node": "^22.10.2",
     "@types/react-chartjs-2": "^2.0.2",
     "gh-pages": "^6.2.0"
   }
