--- a/crm-app/package.json
+++ b/crm-app/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
@@ -47,6 +48,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/node": "^22.10.2",
     "@types/react-chartjs-2": "^2.0.2",
+    "@types/react-dom": "^19.0.2",
     "gh-pages": "^6.2.0"
   }
 }
