--- a/crm-app/package.json
+++ b/crm-app/package.json
@@ -46,6 +46,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/node": "^22.10.2",
     "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^19.0.2",
